--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <title>Pizza Store</title>
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300|Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Muli:400|Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/slate/bootstrap.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/custom.js"></script>
+
   </head>
   <body>
     <!-- Navbar -->
@@ -20,7 +24,7 @@
           </div>
         </a>
       </div>
-      
+
       <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -41,9 +45,101 @@
           </div>
         </div>
       </nav>
-    </div>
+    </div> <!-- .Navbar end -->
 
-    <!-- .Navbar end -->
+    <!-- Home screen -->
+    <section id="home" class="screen-height">
+      <div class="home-overlay"></div>
+      <div class="intro">
+        <h1>pizza to fill your soul</h1>
+        <div class="ribbon">it all starts with fresh, we've got something for everyone</div>
+      </div>
+  	</section><!-- .Home screen end -->
+
+    <!-- Block Section -->
+    <section class="block-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="block-section-header">
+              <div class="text-center">We have over 40 years of pizza making experience</div>
+              <div class="text-center">Our pizza loaded with toppings and finished with a rich, creamy house provel cheese.</div>
+            </div>
+            <div class="block-section-menu">
+              <div class="row rows-menu">
+                <div class="col-sm-6">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <div class="pizza">MARINARA</div>
+                      <div class="toppings">pomodoro, grana padano, fior di latte, fresh basil (+4 sub mozzarella di bufala)</div>
+                    </div>
+                    <div class="col-sm-4 price text-right">$10</div>
+                  </div>
+                </div>
+
+                <div class="col-sm-6">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <div class="pizza">MARGHERITA</div>
+                      <div class="toppings">pomodoro, oregano, garlic confit, fresh basil</div>
+                    </div>
+                    <div class="col-sm-4 price text-right">$13</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+<!--  -->
+            <div class="row rows-menu">
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <div class="pizza">NAPOLETANA</div>
+                    <div class="toppings">pomodoro, mozzarella di bufala, oregano, garlic, anchovies, fresh Italian parsley</div>
+                  </div>
+                  <div class="col-sm-4 price text-right">$18</div>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <div class="pizza">PROSCIUTTO E RUCOLA</div>
+                    <div class="toppings">pomodoro, grana padano, fior di latte, parma prosciutto, arugula</div>
+                  </div>
+                  <div class="col-sm-4 price text-right">$19</div>
+                </div>
+              </div>
+            </div>
+
+<!--  -->
+            <div class="row rows-menu">
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <div class="pizza">NAPOLETANA</div>
+                    <div class="toppings">pomodoro, mozzarella di bufala, oregano, garlic, anchovies, fresh Italian parsley</div>
+                  </div>
+                  <div class="col-sm-4 price text-right">$18</div>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <div class="pizza">PROSCIUTTO E RUCOLA</div>
+                    <div class="toppings">pomodoro, grana padano, fior di latte, parma prosciutto, arugula</div>
+                  </div>
+                  <div class="col-sm-4 price text-right">$19</div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section><!-- .Block Section end -->
+
 
     <div id="app"></div>
   </body>
