--- a/src/index.html
+++ b/src/index.html
@@ -3,100 +3,21 @@
   <head>
     <title>Pizza Store</title>
     <link href='https://fonts.googleapis.com/css?family=Muli:400|Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/slate/bootstrap.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="https://npmcdn.com/react-select/dist/react-select.css">
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <!-- <script src="./js/custom.js"></script> -->
 
   </head>
   <body>
+
+
+
     <div id="app"></div>
-
-    <!-- Block Section -->
-    <section class="block-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="block-section-header">
-              <div class="text-center">We have over 40 years of pizza making experience</div>
-              <div class="text-center">Our pizza loaded with toppings and finished with a rich, creamy house provel cheese.</div>
-            </div>
-            <div class="block-section-menu">
-              <div class="row rows-menu">
-                <div class="col-sm-6">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <div class="pizza">MARINARA</div>
-                      <div class="toppings">pomodoro, grana padano, fior di latte, fresh basil (+4 sub mozzarella di bufala)</div>
-                    </div>
-                    <div class="col-sm-4 price text-right">$10</div>
-                  </div>
-                </div>
-
-                <div class="col-sm-6">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <div class="pizza">MARGHERITA</div>
-                      <div class="toppings">pomodoro, oregano, garlic confit, fresh basil</div>
-                    </div>
-                    <div class="col-sm-4 price text-right">$13</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-<!--  -->
-            <div class="row rows-menu">
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <div class="pizza">NAPOLETANA</div>
-                    <div class="toppings">pomodoro, mozzarella di bufala, oregano, garlic, anchovies, fresh Italian parsley</div>
-                  </div>
-                  <div class="col-sm-4 price text-right">$18</div>
-                </div>
-              </div>
-
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <div class="pizza">PROSCIUTTO E RUCOLA</div>
-                    <div class="toppings">pomodoro, grana padano, fior di latte, parma prosciutto, arugula</div>
-                  </div>
-                  <div class="col-sm-4 price text-right">$19</div>
-                </div>
-              </div>
-            </div>
-
-<!--  -->
-            <div class="row rows-menu">
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <div class="pizza">NAPOLETANA</div>
-                    <div class="toppings">pomodoro, mozzarella di bufala, oregano, garlic, anchovies, fresh Italian parsley</div>
-                  </div>
-                  <div class="col-sm-4 price text-right">$18</div>
-                </div>
-              </div>
-
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <div class="pizza">PROSCIUTTO E RUCOLA</div>
-                    <div class="toppings">pomodoro, grana padano, fior di latte, parma prosciutto, arugula</div>
-                  </div>
-                  <div class="col-sm-4 price text-right">$19</div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section><!-- .Block Section end -->
-
     <script src="./index.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
   </body>
 </html>
